docs/2.x/getting-started/introduction.md
# Introduction

VitoDeploy or for short Vito is a self-hosted platform that automates server provisioning and application deployment for
PHP projects like
Laravel and WordPress, etc. It connects to your server remotely via SSH, installs necessary tools (e.g., Nginx, PHP,
MySQL), and
streamlines tasks like pulling code from repositories, managing environment variables, configuring web servers, and
issuing SSL certificates. With a user-friendly interface, it supports multi-site deployments, automated backups, and
performance monitoring, making it a convenient solution for managing servers and deploying applications efficiently.

<iframe
  width="100%"
  height="400"
  src="https://www.youtube.com/embed/_xSzdM0ZRKU?si=Zgyd9mVL5j8OzsEt"
  title="Hero Video"
  frameBorder="0"
  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
  allowFullScreen
></iframe>

## Features

Here are some of the features that Vito provides you.

- **Server Provisioning**: Automates the setup of servers with essential tools like Nginx, MySQL, PHP, and more.
- **App Deployment**: Deploys PHP applications (e.g., Laravel, WordPress) using Git repositories and environment configurations.
- **SSL Management**: Issues Let’s Encrypt SSL certificates for secure connections.
- **Firewall Configuration**: Manages server security with configurable firewall settings.
- **Multi-Site Support**: Allows deployment and management of multiple applications on a single server.
- **Database Management**: Simplifies database creation, configuration, and access.
- **Automated Backups**: Supports scheduled backups for databases with restoration options.
- **User-Friendly Interface**: Offers a clean, intuitive dashboard for server and application management.
- **Monitoring Tools**: Includes resource usage monitoring for servers.
- **Customizable Scripts**: Allows custom scripts for advanced use cases.
- **User Management**: Allows you to manage users and their permissions.
